--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
+    "server": "node server.js",
     "dev": "nodemon index.js",
     "migrate": "node server/utils/migrate.js",
     "test": "jest",
